# reporting_portal_auth/api_specs/api_spec.json
@@ -1,6 +1,6 @@
 {
         "swagger": "2.0",
-        "host": "127.0.0.1:8000",
+        "host": "localhost:8080",
         "basePath": "/api/reporting_portal_auth/",
         "info": {
             "version": "1.0.0",
@@ -54,6 +54,17 @@
               },
               "Refresh_token": {
                 "type": "string"
+              },
+              "role": {
+                "type": "array",
+                "items": {
+                  "type": "string",
+                  "enum": [
+                    "USER",
+                    "RP",
+                    "ADMIN"
+                  ]
+                }
               }
             },
             "required": [
@@ -64,7 +75,7 @@
         },
         "parameters": {
             "UserCredentailsParameters": {
-                "name": "user credentails",
+                "name": "user_credentails",
                 "in": "body",
                 "description": "Valid User credentails to create user entry",
                 "schema": {
@@ -87,12 +98,6 @@
                     "summary": "create a user entry",
                     "description": "create a user entry in a datebase with valid values",
                     "operationId": "Create_User",
-                     "security": [{
-                        "oauth": [
-                            "read",
-                            "write"
-                        ]
-                    }],
                     "parameters": [
                         {
                             "$ref": "#/parameters/UserCredentailsParameters"
